soc: Add FDL support for Laguna

--- a/drivers/soc/axera/Kconfig
+++ b/drivers/soc/axera/Kconfig
@@ -12,4 +12,5 @@ config DM_GLBCON
 	help
 	  This option support sysctl driver for Global Register Controller.
 
+source "drivers/soc/axera/fdl/Kconfig"
 endif
