board: laguna: Allow MTDPARTS to be read from mtd device

--- a/board/axera/common/laguna/Makefile
+++ b/board/axera/common/laguna/Makefile
@@ -1,7 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0+
 
-obj- += dummy.o
+# obj- += dummy.o
 
-ifneq ($(CONFIG_LUA_NOR0)$(CONFIG_LUA_NOR1),)
-obj-y += mtdparts.o
+obj-y += common.o mtdparts.o
+
+ifndef CONFIG_SPL_BUILD
+obj-y += fdl_blk.o
 endif
