--- a/board/axera/common/laguna/Kconfig
+++ b/board/axera/common/laguna/Kconfig
@@ -1,16 +1,32 @@
 
-config LUA_NOR0
-	bool "SPI NOR Flash Settings for nor0"
+config LUA_MTDPARTS_READ
+	bool "Allow MTDPARTS to be read from mtd device"
 	depends on SYS_MTDPARTS_RUNTIME
 	depends on AXERA_LUA
 	help
-	  This enable settings for first SPI NOR Flash.
+	  This option allows us to dynamically build the variables mtdids
+	  and mtdparts at runtime by reading mtdparts string from mtd device.
+
+config LUA_SPI_NOR_RUNTIME
+	bool "Allow SPI NOR to be configured at runtime"
+	depends on SYS_MTDPARTS_RUNTIME
+	depends on AXERA_LUA
+	help
+	  This option allows us to dynamically build the variables mtdids
+	  and mtdparts at runtime for SPI NOR Flash.
+
+if LUA_SPI_NOR_RUNTIME
+
+config LUA_NOR0
+	bool "SPI NOR Flash Settings for nor0"
+	help
+	  This enables settings for first SPI NOR Flash.
 
 config LUA_MTDPARTS_NOR0
 	string "MTD Partitions for nor0"
 	depends on LUA_NOR0
 	help
-	  This define the partition of nor0 used to build mtparts dynamically
+	  This defines the partitions of nor0 used to build mtparts dynamically
 	  for booting.
 
 config LUA_NOR1
@@ -18,19 +34,29 @@ config LUA_NOR1
 	depends on SYS_MTDPARTS_RUNTIME
 	depends on AXERA_LUA
 	help
-	  This enable settings for second SPI NOR Flash.
+	  This enables settings for second SPI NOR Flash.
 
 config LUA_MTDPARTS_NOR1
 	string "MTD Partitions for nor1"
 	depends on LUA_NOR1
 	help
-	  This define the partition of nor1 used to build mtparts dynamically
+	  This defines the partitions of nor1 used to build mtparts dynamically
 	  for booting.
+
+endif
+
+config LUA_SPI_NAND_RUNTIME
+	bool "Allow SPI NAND to be configured at runtime"
+	depends on SYS_MTDPARTS_RUNTIME
+	depends on AXERA_LUA
+	help
+	  This option allows us to dynamically build the variables mtdids
+	  and mtdparts at runtime for SPI NAND Flash.
+
+if LUA_SPI_NAND_RUNTIME
 
 config LUA_NAND0
 	bool "SPI NAND Flash Settings for nand0"
-	depends on SYS_MTDPARTS_RUNTIME
-	depends on AXERA_LUA
 	help
 	  This enable settings for the first SPI NAND Flash.
 
@@ -40,3 +66,5 @@ config LUA_MTDPARTS_NAND0
 	help
 	  This define the partition of nand0 used to build mtparts dynamically
 	  for booting.
+
+endif
