--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -30,10 +30,7 @@ CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_SAFETY_INIT=y
-CONFIG_LUA_NOR0=y
-CONFIG_LUA_MTDPARTS_NOR0="64k(misc),64k(env),64k(vbmeta_a),64k(vbmeta_b),512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
-CONFIG_LUA_NAND0=y
-CONFIG_LUA_MTDPARTS_NAND0="64k(misc)ro,64k(env)ro,64k(vbmeta_a)ro,64k(vbmeta_b)ro,512k(atf_a),512k(atf_b),512k(optee_a),512k(optee_b),2m(uboot_a),2m(uboot_b)"
+CONFIG_LUA_MTDPARTS_READ=y
 CONFIG_LUA_AB=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
@@ -42,11 +39,13 @@ CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_FIT=y
 CONFIG_SPL_FIT_PRINT=y
+CONFIG_SPL_FIT_SIGNATURE=y
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_LOAD_FIT_ADDRESS=0x100200000
 CONFIG_SPL_FIT_SOURCE="arch/arm/mach-axera/laguna/spl-fit.its"
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 # CONFIG_BOOTSTD is not set
+CONFIG_LEGACY_IMAGE_FORMAT=y
 CONFIG_SUPPORT_RAW_INITRD=y
 CONFIG_OF_BOARD_SETUP=y
 CONFIG_OF_SYSTEM_SETUP=y
@@ -142,6 +141,7 @@ CONFIG_CMD_READ=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_USB=y
 CONFIG_CMD_USB_MASS_STORAGE=y
+CONFIG_CMD_BLOCK=y
 CONFIG_CMD_SETEXPR_FMT=y
 CONFIG_CMD_DHCP=y
 CONFIG_BOOTP_MAY_FAIL=y
@@ -252,6 +252,8 @@ CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
 CONFIG_SOC_LAGUNA=y
 CONFIG_DM_GLBCON=y
+CONFIG_FDL_UART=y
+CONFIG_FDL_DEBUG=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
