drivers: bootdev: Add syscon backend support

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -98,6 +98,8 @@ source "drivers/ram/Kconfig"
 
 source "drivers/reboot-mode/Kconfig"
 
+source "drivers/bootdev/Kconfig"
+
 source "drivers/remoteproc/Kconfig"
 
 source "drivers/reset/Kconfig"
