configs: laguna: Enable bootstarp and download_if

--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -7,6 +7,7 @@ CONFIG_USE_ARCH_MEMSET=y
 # CONFIG_ARM64_SUPPORT_AARCH32 is not set
 CONFIG_ARCH_AXERA=y
 CONFIG_SYS_TEXT_BASE=0x100200000
+CONFIG_SYS_MALLOC_F_LEN=0x8000
 CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
@@ -17,6 +18,7 @@ CONFIG_SPL_TEXT_BASE=0x14000000
 CONFIG_SYS_PROMPT="LUA$ "
 CONFIG_SPL_SERIAL=y
 CONFIG_BOOTCOUNT_BOOTLIMIT=3
+CONFIG_SPL_SYS_MALLOC_F_LEN=0x4000
 CONFIG_SPL_SIZE_LIMIT=0x200000
 CONFIG_SPL_SIZE_LIMIT_PROVIDE_STACK=0x10000
 CONFIG_DEBUG_UART_BASE=0x0E403000
@@ -72,7 +74,6 @@ CONFIG_SPL_BSS_MAX_SIZE=0x2000
 CONFIG_SPL_SYS_REPORT_STACK_F_USAGE=y
 CONFIG_SPL_SHOW_ERRORS=y
 CONFIG_SPL_BOARD_INIT=y
-CONFIG_SPL_DM_BOOT_DEVICE=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
 CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
 CONFIG_SPL_LEGACY_IMAGE_CRC_CHECK=y
@@ -185,7 +186,9 @@ CONFIG_SPL_DM_WARN=y
 # CONFIG_DM_DEVICE_REMOVE is not set
 CONFIG_SPL_DM_SEQ_ALIAS=y
 CONFIG_REGMAP=y
+CONFIG_SPL_REGMAP=y
 CONFIG_SYSCON=y
+CONFIG_SPL_SYSCON=y
 CONFIG_SIMPLE_BUS_CORRECT_RANGE=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_BLOCK_CACHE=y
@@ -238,8 +241,8 @@ CONFIG_PINCTRL=y
 CONFIG_PINCONF=y
 # CONFIG_POWER is not set
 CONFIG_DM_REBOOT_MODE=y
-CONFIG_DM_BOOT_DEVICE=y
-CONFIG_DM_BOOT_DEVICE_GPIO=y
+CONFIG_BOOT_DEVICE=y
+CONFIG_SPL_BOOT_DEVICE=y
 CONFIG_DM_RESET=y
 CONFIG_RESET_SYSCON=y
 CONFIG_BAUDRATE=921600
@@ -258,6 +261,9 @@ CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
 CONFIG_PL022_SPI=y
+CONFIG_SYSINFO=y
+CONFIG_SPL_SYSINFO=y
+CONFIG_SYSINFO_SYSCON=y
 CONFIG_USB=y
 # CONFIG_SPL_DM_USB is not set
 CONFIG_USB_XHCI_HCD=y
