--- a/arch/arm/dts/laguna-qemu.dts
+++ b/arch/arm/dts/laguna-qemu.dts
@@ -39,27 +39,99 @@
 		device_type = "memory";
 	};
 
-	boot-device {
-		compatible = "boot-device-gpio";
-		gpios = <&gpio0_a 0 GPIO_ACTIVE_HIGH>,
-				<&gpio0_a 1 GPIO_ACTIVE_HIGH>,
-				<&gpio0_a 2 GPIO_ACTIVE_HIGH>,
-				<&gpio0_a 3 GPIO_ACTIVE_HIGH>,
-				<&gpio0_a 4 GPIO_ACTIVE_HIGH>;
-		u-boot,env-variable = "bootdevice";
-		dev-Only-eMMC        = <0x01>;
-		dev-Only-Nor         = <0x02>;
-		dev-Only-Nand        = <0x03>;
-		dev-Only-Hyper       = <0x04>;
-		dev-Both-Nor-Nand    = <0x06>;
-		dev-Both-Nor-eMMC    = <0x0E>;
-		dev-UART             = <0x11>;
-		dev-USB              = <0x12>;
-		dev-SD               = <0x13>;
+	safe_glb: safe_glb@00601000 {
+		compatible = "syscon", "simple-mfd";
+		reg = <0x00 0x00601000 0x00 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		u-boot,dm-pre-reloc;
 		u-boot,dm-spl;
+		status = "okay";
+	};
+
+	safe_top_glb: safe_top_glb@006D9000 {
+		compatible = "syscon", "simple-mfd";
+		reg = <0x00 0x006D9000 0x00 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		u-boot,dm-pre-reloc;
+		u-boot,dm-spl;
+		status = "okay";
+	};
+
+	bootdevices {
+		compatible = "simple-bus";
+		#address-cells = <2>;
+		#size-cells = <2>;
+		u-boot,dm-pre-reloc;
+		u-boot,dm-spl;
+
+		download_if {
+			compatible = "syscon-sysinfo";
+			regmap = <&safe_glb 0x224>;
+			syscon-shift = <1>;
+			syscon-mask = <7>;
+			status = "okay";
+		};
+
+		syscon-bootdev {
+			compatible = "boot-device-syscon";
+			regmap = <&safe_top_glb 0xC>;
+			syscon-shift = <0>;
+			syscon-mask = <0x1F>;
+			u-boot,env-variable = "bootdevice";
+			dev-Safety_NOR            = <0>;
+			dev-Safety_NAND_2K        = <1>;
+			dev-Safety_NAND_4K        = <2>;
+			dev-Safety_NAND_2KMP      = <3>;
+			dev-Safety_NAND_4KMP      = <4>;
+			dev-Main_eMMC_DUAL_BOOT   = <7>;
+			dev-Main_NOR              = <8>;
+			dev-Main_NAND_2K          = <9>;
+			dev-Main_NAND_4K          = <10>;
+			dev-Main_NAND_2KMP        = <11>;
+			dev-Main_NAND_4KMP        = <12>;
+			dev-Main_eMMC_BOOT        = <13>;
+			dev-Main_eMMC             = <14>;
+			dev-Main_HYPER            = <15>;
+			dev-Download              = <0x10 0x11 0x12 0x13
+			                             0x14 0x17 0x18 0x19
+			                             0x1A 0x1B 0x1C 0x1D
+			                             0x1E 0x1F>;
+			u-boot,dm-spl;
+			status = "okay";
+		};
+
+		gpio-bootdev {
+			compatible = "boot-device-gpio";
+			gpios = <&gpio0_a 0 GPIO_ACTIVE_HIGH>,
+					<&gpio0_a 1 GPIO_ACTIVE_HIGH>,
+					<&gpio0_a 2 GPIO_ACTIVE_HIGH>,
+					<&gpio0_a 3 GPIO_ACTIVE_HIGH>,
+					<&gpio0_a 4 GPIO_ACTIVE_HIGH>;
+			u-boot,env-variable = "bootdevice";
+			dev-Only-eMMC        = <0x01>;
+			dev-Only-Nor         = <0x02>;
+			dev-Only-Nand        = <0x03>;
+			dev-Only-Hyper       = <0x04>;
+			dev-Both-Nor-Nand    = <0x06>;
+			dev-Both-Nor-eMMC    = <0x0E>;
+			dev-UART             = <0x11>;
+			dev-USB              = <0x12>;
+			dev-SD               = <0x13>;
+			u-boot,dm-spl;
+			status = "okay";
+		};
 	};
 
 	soc {
+		compatible = "simple-bus";
+		#address-cells = <2>;
+		#size-cells = <2>;
+		u-boot,dm-pre-reloc;
+		u-boot,dm-spl;
+		ranges;
+
 		mmc0: mmc@0C010000 {
 			compatible = "axera,lua-dwcmshc";
 			reg = <0x0 0x0C010000 0x0 0x2000>;
