--- a/common/spl/Makefile
+++ b/common/spl/Makefile
@@ -39,4 +39,5 @@ obj-$(CONFIG_$(SPL_TPL_)MULTI_MTD) += spl_multi_mtd.o
 obj-$(CONFIG_$(SPL_TPL_)MULTI_BLK) += spl_multi_blk.o
 obj-$(CONFIG_$(SPL_TPL_)MULTI_FAT) += spl_multi_fat.o
 obj-$(CONFIG_$(SPL_TPL_)MULTI_UART) += spl_multi_uart.o
+obj-$(CONFIG_$(SPL_TPL_)OCM_SUPPORT) += spl_ocm.o
 endif
