configs: lua-virt: Enable FDL over USB options

--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -256,7 +256,9 @@ CONFIG_SYS_NS16550=y
 CONFIG_SOC_LAGUNA=y
 CONFIG_DM_GLBCON=y
 CONFIG_FDL_UART=y
+CONFIG_FDL_USB=y
 CONFIG_FDL_DEBUG=y
+CONFIG_FDL_USB_DRV=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
