--- a/drivers/clk/axera/Makefile
+++ b/drivers/clk/axera/Makefile
@@ -5,4 +5,4 @@
 
 obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-mux.o clk-gate.o
 obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-divider.o clk-fixed-factor.o
-# obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-pll.o
+obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-pll.o
