arm: laguna: Add pll dts within clocks-v1.dtsi

--- a/arch/arm/dts/laguna-cru.dtsi
+++ b/arch/arm/dts/laguna-cru.dtsi
@@ -12,6 +12,17 @@
 		#size-cells = <2>;
 		ranges;
 
+		main_pllc: main-pllc@18001000 {
+			compatible = "syscon", "simple-mfd";
+			reg = <0x00 0x18001000 0x00 0x1000>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			pll-ready = <0x104>;
+			pll-frc-en = <0x144>;
+			pll-frc-en-sw = <0x150>;
+			pll-reopen = <0x15C>;
+		};
+
 		common_cru: common_cru@06101000 {
 			compatible = "syscon", "simple-mfd";
 			reg = <0x00 0x06101000 0x00 0x1000>;
@@ -420,9 +431,9 @@
 				clk_dsu_sel: clk_dsu_sel {
 					compatible = "clk_mux";
 					clocks = <&fab_pll_24m>, <&fab_pll_800m>,
-					         <&apll_996m>, <&npu_pll_996m>;
+					         <&apll_900m>, <&npu_pll_996m>;
 					clock-names = "fab_pll_24m", "fab_pll_800m",
-					              "apll_996m", "npu_pll_996m";
+					              "apll_900m", "npu_pll_996m";
 					#clock-cells = <0>;
 					clock-output-names = "clk_dsu_sel";
 					bit-shift = <CLK_DSU_OFFSET>;
@@ -886,8 +897,8 @@
 
 				sclk_i2s_m_sel: sclk_i2s_m_sel {
 					compatible = "clk_mux";
-					clocks = <&apll_13p28m>, <&apll_16p6m>,
-							 <&apll_19p92m>;
+					clocks = <&apll_36m>, <&apll_45m>,
+							 <&apll_54m>;
 					clock-names = "apll_16p384m", "apll_20p48m",
 								  "apll_24p576m";
 					#clock-cells = <0>;
@@ -966,7 +977,7 @@
 
 				clk_i2s_ref_sel: clk_i2s_ref_sel {
 					compatible = "clk_mux";
-					clocks = <&apll_9p96m>, <&apll_16p6m>,
+					clocks = <&apll_27m>, <&apll_45m>,
 							 <&fab_pll_24m>, <&epll_25m>;
 					clock-names = "apll_12p288m", "apll_20p48m",
 								  "fab_pll_24m", "epll_25m";
