--- a/arch/arm/dts/laguna-cru-v2.dtsi
+++ b/arch/arm/dts/laguna-cru-v2.dtsi
@@ -32,9 +32,9 @@
 				          <PCLK_TOP_OFFSET PCLK_TOP_WIDTH>,
 				          <CLK_COMM_TMR_OFFSET CLK_COMM_TMR_WIDTH>,
 				          <CLK_COMM_WWDT_OFFSET CLK_COMM_WWDT_WIDTH>;
-				clocks = <&fab_pll_24m &fab_pll_300m &fab_pll_400m &fab_pll_500m &fab_pll_600m>,
-				         <&fab_pll_24m &fab_pll_300m &fab_pll_400m &fab_pll_500m &fab_pll_600m &fab_pll_800m>,
-				         <&fab_pll_24m &fab_pll_300m &fab_pll_400m &fab_pll_500m &fab_pll_600m>,
+				clocks = <&fab_pll_24m &fab_pll_300m &fab_pll_400m &epll_500m &fab_pll_600m>,
+				         <&fab_pll_24m &fab_pll_300m &fab_pll_400m &epll_500m &fab_pll_600m &fab_pll_800m>,
+				         <&fab_pll_24m &fab_pll_300m &fab_pll_400m &epll_500m &fab_pll_600m>,
 				         <&fab_pll_24m &fab_pll_100m &fab_pll_200m>,
 				         <&fake_32k &fab_pll_24m>,
 				         <&fake_32k &main_xtal_24m>;
@@ -266,14 +266,14 @@
 				                    <CLK_MAIN_CAN_PE_PARENT_NUM>, <CLK_MAIN_EPHY_REF_PARENT_NUM>,
 				                    <CLK_I2S_REF_PARENT_NUM>;
 				clocks = <&fab_pll_24m &fab_pll_200m &fab_pll_300m &fab_pll_400m>,
-				         <&apll_13p28m &apll_16p6m &apll_19p92m>,
+				         <&apll_36m &apll_45m &apll_54m>,
 				         <&fake_32k &fab_pll_24m>,
 				         <&fab_pll_24m &fab_pll_100m &fab_pll_200m>,
 				         <&fab_pll_24m &fab_pll_60m>,
 				         <&epll_5m &epll_50m &epll_250m>,
 				         <&fab_pll_20m &fab_pll_40m &fab_pll_80m>,
 				         <&fab_pll_24m &epll_25m &epll_50m &epll_125m>,
-				         <&apll_9p96m &apll_16p6m &fab_pll_24m &epll_25m>;
+				         <&apll_27m &apll_45m &fab_pll_24m &epll_25m>;
 				clock-name = "clk_periph_glb_sel", "sclk_i2s_m_sel", "clk_periph_gpio_sel",
 				             "clk_periph_ser_sel", "pclk_usb_phy_bus_sel", "clk_main_rgmii_tx_sel",
 				             "clk_main_can_pe_sel", "clk_main_ephy_ref_sel", "clk_i2s_ref_sel";
