--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -32,11 +32,14 @@ CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_SAFETY_INIT=y
+CONFIG_LUA_SECURE_BOOT=y
+CONFIG_LUA_FIT=y
+# CONFIG_SPL_LOAD_MULTI_FIT is not set
+CONFIG_LUA_RAS=y
 CONFIG_LUA_MTDPARTS_READ=y
 CONFIG_LUA_AB=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
-CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_FIT=y
@@ -44,7 +47,6 @@ CONFIG_SPL_FIT_PRINT=y
 CONFIG_SPL_FIT_SIGNATURE=y
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_LOAD_FIT_ADDRESS=0x100200000
-CONFIG_SPL_FIT_SOURCE="arch/arm/mach-axera/laguna/spl-fit.its"
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 # CONFIG_BOOTSTD is not set
 CONFIG_LEGACY_IMAGE_FORMAT=y
@@ -92,6 +94,7 @@ CONFIG_SPL_SPINAND_SUPPORT=y
 CONFIG_SPL_DM_SPI_FLASH=y
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
+CONFIG_SPL_OCM_SUPPORT=y
 # CONFIG_SPL_SPI_FLASH_TINY is not set
 CONFIG_SPL_SPI_FLASH_MTD=y
 CONFIG_SPL_SPI_LOAD=y
@@ -128,7 +131,6 @@ CONFIG_CMD_DFU=y
 CONFIG_CMD_DM=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_GPT=y
-# CONFIG_RANDOM_UUID is not set
 CONFIG_CMD_GPT_RENAME=y
 CONFIG_CMD_LSBLK=y
 CONFIG_CMD_MMC=y
@@ -183,7 +185,6 @@ CONFIG_KEEP_SERVERADDR=y
 CONFIG_BOOTP_SERVERIP=y
 CONFIG_SPL_DM=y
 CONFIG_SPL_DM_WARN=y
-# CONFIG_DM_DEVICE_REMOVE is not set
 CONFIG_SPL_DM_SEQ_ALIAS=y
 CONFIG_REGMAP=y
 CONFIG_SPL_REGMAP=y
@@ -197,6 +198,7 @@ CONFIG_DM_BOOTCOUNT=y
 CONFIG_CLK=y
 CONFIG_SPL_CLK=y
 CONFIG_CLK_AXERA=y
+CONFIG_LUA_PLL_FIXED_FREQ=y
 CONFIG_DFU_MMC=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x3090000000
