--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -56,6 +56,10 @@ CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTCOMMAND="run distro_bootcmd"
 CONFIG_CONSOLE_RECORD=y
+CONFIG_SPL_CONSOLE_RECORD=y
+CONFIG_CONSOLE_RECORD_OUT_REUSE=y
+CONFIG_CONSOLE_RECORD_ENABLE_INIT=y
+CONFIG_CONSOLE_RECORD_FIXED_ADDR=0x101100000
 CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_BOARD_TYPES=y
 CONFIG_BOARD_LATE_INIT=y
