--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -59,7 +59,7 @@ CONFIG_CONSOLE_RECORD=y
 CONFIG_SPL_CONSOLE_RECORD=y
 CONFIG_CONSOLE_RECORD_OUT_REUSE=y
 CONFIG_CONSOLE_RECORD_ENABLE_INIT=y
-CONFIG_CONSOLE_RECORD_FIXED_ADDR=0x101100000
+CONFIG_CONSOLE_RECORD_FIXED_ADDR=0x102F00000
 CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_BOARD_TYPES=y
 CONFIG_BOARD_LATE_INIT=y
@@ -85,9 +85,10 @@ CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
 CONFIG_SPL_LEGACY_IMAGE_CRC_CHECK=y
 CONFIG_SYS_SPL_MALLOC=y
 CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
-CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x101000000
+CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x103000000
 CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
+CONFIG_SPL_MD5=y
 CONFIG_SPL_ENV_SUPPORT=y
 CONFIG_SPL_SAVEENV=y
 CONFIG_SPL_MMC_WRITE=y
@@ -96,12 +97,13 @@ CONFIG_SPL_MULTI_FAT=y
 CONFIG_SPL_MULTI_UART=y
 CONFIG_SPL_SPINAND_SUPPORT=y
 CONFIG_SPL_DM_SPI_FLASH=y
+CONFIG_SPL_OS_BOOT=y
+CONFIG_SYS_SPL_ARGS_ADDR=0x118000000
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
 CONFIG_SPL_OCM_SUPPORT=y
 # CONFIG_SPL_SPI_FLASH_TINY is not set
 CONFIG_SPL_SPI_FLASH_MTD=y
-CONFIG_SPL_SPI_LOAD=y
 CONFIG_SPL_ATF=y
 CONFIG_SPL_ATF_LOAD_IMAGE_V2=y
 CONFIG_HUSH_PARSER=y
@@ -290,6 +292,7 @@ CONFIG_SPL_TINY_MEMSET=y
 CONFIG_LIBAVB=y
 CONFIG_SHA384=y
 # CONFIG_VPL_LZMA is not set
+CONFIG_SPL_GZIP=y
 CONFIG_HEXDUMP=y
 CONFIG_SPL_HEXDUMP=y
 CONFIG_GETOPT=y
