spl: Add AES support

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -103,6 +103,15 @@ config FIT_CIPHER
 	  Enable the feature of data ciphering/unciphering in the tool mkimage
 	  and in the u-boot support of the FIT image.
 
+config SPL_FIT_CIPHER
+	bool "Enable ciphering data in a FIT uImages for SPL"
+	depends on SPL
+	depends on DM
+	select SPL_AES
+	help
+	  Enable the feature of data ciphering/unciphering in the tool mkimage
+	  and in the SPL support of the FIT image.
+
 config FIT_VERBOSE
 	bool "Show verbose messages when FIT images fail"
 	help
