--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -352,6 +352,15 @@ config AES
 	  supported by the algorithm but only a 128-bit key is supported at
 	  present.
 
+config SPL_AES
+	bool "Support the AES algorithm in SPL"
+	help
+	  This provides a means to encrypt and decrypt data using the AES
+	  (Advanced Encryption Standard). This algorithm uses a symetric key
+	  and is widely used as a streaming cipher. Different key lengths are
+	  supported by the algorithm but only a 128-bit key is supported at
+	  present.
+
 source lib/ecdsa/Kconfig
 source lib/rsa/Kconfig
 source lib/crypto/Kconfig
