--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -43,6 +43,8 @@ CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_FIT=y
+CONFIG_FIT_CIPHER=y
+CONFIG_SPL_FIT_CIPHER=y
 CONFIG_SPL_FIT_PRINT=y
 CONFIG_SPL_FIT_SIGNATURE=y
 CONFIG_SPL_LOAD_FIT=y
@@ -85,7 +87,8 @@ CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
 CONFIG_SPL_LEGACY_IMAGE_CRC_CHECK=y
 CONFIG_SYS_SPL_MALLOC=y
 CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
-CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x103000000
+CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x108000000
+CONFIG_SYS_SPL_MALLOC_SIZE=0x1000000
 CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
 CONFIG_SPL_MD5=y
