--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -28,6 +28,8 @@ CONFIG_SPL_SPI=y
 CONFIG_ARMV8_SPL_EXCEPTION_VECTORS=y
 CONFIG_AXERA_LUA=y
 CONFIG_TARGET_LUA_VIRT=y
+CONFIG_LUA_ATF_SUPPORT=y
+CONFIG_LUA_OPTEE_SUPPORT=y
 CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
@@ -43,8 +45,6 @@ CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_FIT=y
-CONFIG_FIT_CIPHER=y
-CONFIG_SPL_FIT_CIPHER=y
 CONFIG_SPL_FIT_PRINT=y
 CONFIG_SPL_FIT_SIGNATURE=y
 CONFIG_SPL_LOAD_FIT=y
@@ -133,7 +133,6 @@ CONFIG_CMD_SHA1SUM=y
 CONFIG_SHA1SUM_VERIFY=y
 CONFIG_CMD_STRINGS=y
 CONFIG_CMD_BCB=y
-CONFIG_CMD_BOOTCTRL=y
 CONFIG_CMD_BIND=y
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DFU=y
