--- a/arch/arm/mach-axera/laguna/Kconfig
+++ b/arch/arm/mach-axera/laguna/Kconfig
@@ -452,6 +452,26 @@ config LUA_MAIN_UART2
 
 endchoice
 
+config LUA_CUSTOM_BOOTSTRAP
+	bool "Customize Bootstrap Register Value"
+	help
+	  This option enable us to customize the bootstrap register value
+	  used for debugging booting and downloading.
+
+config LUA_BOOTSTRAP_REGADDR
+	hex "Bootstrap Register Address"
+	depends on LUA_CUSTOM_BOOTSTRAP
+	default 0x006D9000
+	help
+	  Specify a bootstrap register address.
+
+config LUA_BOOTSTRAP_REGVAL
+	hex "Bootstrap Register Value"
+	depends on LUA_CUSTOM_BOOTSTRAP
+	default 0x0
+	help
+	  Specify a bootstrap register value.
+
 endmenu
 
 endmenu
