--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -1,13 +1,12 @@
 CONFIG_ARM=y
 CONFIG_POSITION_INDEPENDENT=y
-CONFIG_SYS_INIT_SP_BSS_OFFSET=262144
+CONFIG_SYS_INIT_SP_BSS_OFFSET=409600
 CONFIG_SEMIHOSTING=y
 CONFIG_USE_ARCH_MEMCPY=y
 CONFIG_USE_ARCH_MEMSET=y
 # CONFIG_ARM64_SUPPORT_AARCH32 is not set
 CONFIG_ARCH_AXERA=y
 CONFIG_SYS_TEXT_BASE=0x100200000
-CONFIG_SYS_MALLOC_F_LEN=0x8000
 CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
@@ -18,7 +17,6 @@ CONFIG_SPL_TEXT_BASE=0x14000000
 CONFIG_SYS_PROMPT="LUA$ "
 CONFIG_SPL_SERIAL=y
 CONFIG_BOOTCOUNT_BOOTLIMIT=3
-CONFIG_SPL_SYS_MALLOC_F_LEN=0x4000
 CONFIG_SPL_SIZE_LIMIT=0x200000
 CONFIG_SPL_SIZE_LIMIT_PROVIDE_STACK=0x10000
 CONFIG_DEBUG_UART_BASE=0x0E403000
@@ -77,10 +75,11 @@ CONFIG_SPL_SIZE_LIMIT_SUBTRACT_MALLOC=y
 CONFIG_SPL_MAX_SIZE=0x1FE000
 CONFIG_SPL_PAD_TO=0x0
 CONFIG_SPL_HAS_BSS_LINKER_SECTION=y
-CONFIG_SPL_BSS_START_ADDR=0x141C0000
+CONFIG_SPL_BSS_START_ADDR=0x1419C000
 CONFIG_SPL_BSS_MAX_SIZE=0x2000
 CONFIG_SPL_SYS_REPORT_STACK_F_USAGE=y
 CONFIG_SPL_SHOW_ERRORS=y
+CONFIG_SPL_SOC_INIT=y
 CONFIG_SPL_BOARD_INIT=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
 CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
